--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,26 @@
 [versions]
-agp = "8.6.0-rc01"
+agp = "8.6.1"
 appDistribution = "5.0.0"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.4"
-activityCompose = "1.9.1"
-composeBom = "2024.08.00"
+lifecycleRuntimeKtx = "2.8.6"
+activityCompose = "1.9.2"
+composeBom = "2024.09.02"
 googleServices = "4.4.2"
-firebase = "33.2.0"
-playServicesAuth = "21.2.0"
-credentials = "1.5.0-alpha04"
-credentialsPlayServicesAuth = "1.5.0-alpha04"
+firebase = "33.3.0"
+credentials = "1.5.0-alpha05"
+credentialsPlayServicesAuth = "1.5.0-alpha05"
 googleid = "1.1.1"
-navigationCompose = "2.8.0"
+navigationCompose = "2.8.1"
 koinAndroidxCompose = "4.0.0-RC2"
 ktor = "2.3.2"
 serialization = "2.0.20"
-kotlinxSerializationJson = "1.6.3"
+kotlinxSerializationJson = "1.7.2"
 datastorePreferences = "1.1.1"
-materialIconsExtended = "1.7.1"
+materialIconsExtended = "1.7.2"
 logcat = "0.1"
 
 [libraries]
@@ -60,6 +59,7 @@ logcat = { group = "com.squareup.logcat", name = "logcat", version.ref = "logcat
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 firebase-app-distribution = { id = "com.google.firebase.appdistribution", version.ref = "appDistribution" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "serialization" }
