--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ local.properties
 dev.keystore
 app/google-services.json
 /.idea/appInsightsSettings.xml
+.kotlin/sessions/kotlin-compiler-1371583288152403095.salive
