Refactor: Use dominant color from game image as background
This commit refactors the app to use the dominant color extracted from the game image as the background color for the main tabbed view.

Instead of blurring the image and using it as the background, the app now uses the Palette library to extract the dominant color from the game image.
This provides a more vibrant and dynamic background that is consistent with the game's aesthetic.

The `HomeTabView` is updated to pass the extracted dominant color to the `MainTabbedView`, which then sets it as the container color.
The `MainTabbedView` no longer relies on blurring the image, resulting in a cleaner and more efficient implementation.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ coil = "2.7.0"
 coilCompose = "2.7.0"
 composeShimmer = "1.3.1"
 crashlytics = "3.0.2"
+palette = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -63,6 +64,7 @@ logcat = { group = "com.squareup.logcat", name = "logcat", version.ref = "logcat
 coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilCompose" }
 compose-shimmer = { group = "com.valentinilk.shimmer", name = "compose-shimmer", version.ref = "composeShimmer" }
+androidx-palette = { group = "androidx.palette", name = "palette", version.ref = "palette" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
