--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.6.1"
+agp = "8.9.0"
 appDistribution = "5.1.1"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
@@ -7,20 +7,20 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.10.0"
-composeBom = "2025.01.01"
+activityCompose = "1.10.1"
+composeBom = "2025.03.00"
 googleServices = "4.4.2"
-firebase = "33.9.0"
-credentials = "1.5.0-rc01"
-credentialsPlayServicesAuth = "1.5.0-rc01"
+firebase = "33.10.0"
+credentials = "1.5.0"
+credentialsPlayServicesAuth = "1.5.0"
 googleid = "1.1.1"
-navigationCompose = "2.8.6"
+navigationCompose = "2.8.9"
 koinAndroidxCompose = "4.0.0-RC2"
 ktor = "2.3.2"
 serialization = "2.0.20"
 kotlinxSerializationJson = "1.7.2"
-datastorePreferences = "1.1.2"
-materialIconsExtended = "1.7.7"
+datastorePreferences = "1.1.3"
+materialIconsExtended = "1.7.8"
 logcat = "0.1"
 coil = "2.7.0"
 coilCompose = "2.7.0"
